<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <com.augurit.agmobile.common.view.spinner.AMSpinner
                android:id="@+id/sp_dist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_5"
                android:layout_weight="1"
                />

            <com.augurit.agmobile.common.view.spinner.AMSpinner
                android:id="@+id/sp_lev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_5"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="@dimen/padding_5"
            android:layout_marginRight="5dp"
            android:background="@drawable/color_white_stroke"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistic_total"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/all_install_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="512"
                    android:textColor="#000"
                    android:textSize="23sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#999"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistic_installed"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/install_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="442"
                    android:textColor="@color/agmobile_primary"
                    android:textSize="23sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#999"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistic_unInstalled"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/no_install_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="80"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="23sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

        <com.augurit.common.statistics.view.ClockView
            android:id="@+id/clock_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            app:text_title_dial="全市安装率统计"/>

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/hor_view"
            android:layout_width="match_parent"
            android:layout_height="450dp">

        </com.github.mikephil.charting.charts.HorizontalBarChart>


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
    </LinearLayout>

</ScrollView>