<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weui_bg_cell"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/statistics_title_divider" />

            <com.augurit.agmobile.common.view.combineview.AGMultiCheck
                android:id="@+id/area_multcheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSingleLine="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/color_white_stroke"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statistic_total"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/all_sign_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="0"
                        android:textColor="#000"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#999" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statistic_signs_today"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/today_sign_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="0"
                        android:textColor="@color/agmobile_primary"
                        android:textSize="23sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#999" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statistic_signs_yesterday"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/yesterday_sign_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="0"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="23sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <WebView
                android:id="@+id/chart_webview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#26000000"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/refresh_layout"
        app:layout_constraintTop_toBottomOf="@id/head_container"
        tools:visibility="visible">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:indicatorColor="@color/agmobile_surface"
            app:indicatorName="BallPulseIndicator" />

    </LinearLayout>
</RelativeLayout>